// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<span
  class="emotion-0"
  tabindex="-1"
>
  TabFocusTrap
</span>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<span
  class="my-extra-class emotion-0"
  tabindex="-1"
>
  TabFocusTrap
</span>
`;
